Ported database compacting code to the new Kexi that uses system SQLite

KexiDB
*SQLite Driver
*Ported database compacting code to the new Kexi that uses system SQLite version

BUG:293548

DIGEST:Kexi switched to a new optimized SQLite database compacting tool